--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@babel/plugin-transform-react-constant-elements": "^7.0.0-beta.49",
     "svgr": "*"
   }
 }
