--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "svgr": "*"
+    "@svgr/webpack": "*"
   }
 }
