Compatibility with Gatsby 2.0 Beta

--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "svgr"
   ],
   "license": "MIT",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "dependencies": {
     "@svgr/webpack": "*"
+  },
+  "peerDependencies": {
+    "gatsby": ">2.0.0-alpha"
   }
 }
