--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@svgr/webpack": "*"
+    "@svgr/webpack": "^4.0.0"
   },
   "peerDependencies": {
     "gatsby": ">2.0.0-alpha"
