--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   ],
   "license": "MIT",
   "peerDependencies": {
-    "gatsby": ">2.0.0-alpha",
-    "@svgr/webpack": "^2.0.0"
+    "gatsby": "2.x",
+    "@svgr/webpack": "4.x"
   }
 }
