--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   "license": "MIT",
   "peerDependencies": {
     "gatsby": ">2.0.0-alpha",
-    "@svgr/webpack": "^2.0.0"
+    "@svgr/webpack": ">=2.0.0"
   }
 }
