--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-plugin-svgr",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Svgr plugin for gatsby",
   "repository": {
     "type": "git",
@@ -23,7 +23,7 @@
   ],
   "license": "MIT",
   "peerDependencies": {
-    "gatsby": ">2.0.0-alpha",
-    "@svgr/webpack": ">=2.0.0"
+    "@svgr/webpack": ">=2.0.0",
+    "gatsby": ">2.0.0-alpha"
   }
 }
