--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-plugin-svgr",
   "version": "2.0.2",
-  "description": "Svgr plugin for gatsby",
+  "description": "SVGR plugin for Gatsby",
   "repository": {
     "type": "git",
     "url": "https://github.com/zabute/gatsby-plugin-svgr"
@@ -19,11 +19,12 @@
   "keywords": [
     "gatsby",
     "gatsby-plugin",
-    "svgr"
+    "svgr",
+    "svg"
   ],
   "license": "MIT",
   "peerDependencies": {
     "@svgr/webpack": ">=2.0.0",
-    "gatsby": ">2.0.0-alpha"
+    "gatsby": ">=2.0.0"
   }
 }
